# Xanterella-Cli

./: .gitignore  README.md  default.nix  flake.nix
.github/workflows/: main.yml  testrunner.yml
xanterella/: Cargo.toml  funktionen.md  rustfmt.toml  vision.md
xanterella/src/: lib.rs  main.rs
xanterella/src/cli/: commands.rs
xanterella/src/config/: colmena.rs  core.rs  dendric.rs  filepaths.rs  filepaths_test.rs  host.rs  mod.rs  query.rs  templates.rs
xanterella/src/config/colmena/: add.rs  change.rs  change_test.rs  hosts.rs  mod.rs  parse.rs  parse_test.rs
xanterella/src/daemon/: daemon.rs
xanterella/src/init/: core.rs  init.rs  inject.rs  mod.rs
xanterella/src/installer/: core.rs  drives.rs  file.rs  file_test.rs  install.rs  mod.rs
xanterella/src/usb/: core.rs  flash.rs  mod.rs
xanterella/src/utils/: check.rs  config.rs  core.rs  debug.rs  filesystem.rs  get.rs  get_test.rs  git.rs  mod.rs  select.rs
xanterella/tests/: integration_colmena.rs  tests.rs
xanterella/tests/fixtures/colmena/: added.nix  removed.nix  sorted.nix  unsorted.nix
