[package]
name = "xanterella"
version = "0.4.2"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"]}
env_logger = "0.11.10"
inquire = "0.9.4"
log = "0.4.29"
notify-rust = "4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.149"
strum = "0.28.0"
strum_macros = "0.28.0"
tempfile = "3.27.0"
tmp = "0.0.1"
tokio = { version = "1.52.3", features = ["full"]}
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
